G1: G1CollectionSet::finalize_young_part clears survivor list too early

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 20
    • Affects Version/s: 20
    • Component/s: hotspot
    • gc
    • b06

      In G1CollectionSet::finalize_young_part

      ```
      // Clear the fields that point to the survivor list - they are all young now.
        survivors->convert_to_eden();
        .
        .
         double predicted_base_time_ms = _policy->predict_base_elapsed_time_ms(pending_cards);
      ```
      clears the list of survivor regions before we predict the evacuation costs of these regions.

      The predict_survivor_regions_evac_time(); called by predict_base_elapsed_time_ms attempts to iterate the survivor regions list after it has been cleared, thus it returns 0 survivor_regions_evac_time.

            Assignee:
            Ivan Walulya
            Reporter:
            Ivan Walulya
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: