8289800: G1: G1CollectionSet::finalize_young_part clears survivor list too early

Reviewed-by: ayang, tschatzl